Crash on Particle Edit, then Render #66686

Closed
opened 2019-07-11 02:37:44 +02:00 by Paul Hartsuyker · 13 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-10 15:05, hash: bb7b741d2f

Short description of error
Hard crash, after Particle Edit

Exact steps for others to reproduce the error
Hair editing, completed, Disconnect Hair (or Discount All) F12 to Render, full crash.
I have not been able to find out how to "Commit" the Edits to the Particle Hair edits, so I can go back and increase the Number.
Did a Google search on variations of this topic. Tried the Disconnect Hair as a last choice, Render, Crash.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-10 15:05, hash: `bb7b741d2f` **Short description of error** Hard crash, after Particle Edit **Exact steps for others to reproduce the error** Hair editing, completed, Disconnect Hair (or Discount All) F12 to Render, full crash. I have not been able to find out how to "Commit" the Edits to the Particle Hair edits, so I can go back and increase the Number. Did a Google search on variations of this topic. Tried the Disconnect Hair as a last choice, Render, Crash.

Added subscriber: @PaulHartsuyker

Added subscriber: @PaulHartsuyker

#66886 was marked as duplicate of this issue

#66886 was marked as duplicate of this issue

#66771 was marked as duplicate of this issue

#66771 was marked as duplicate of this issue

cat_v12_crash.blend
I have uploaded the file, which now crashes immediately. Open the file, press F12, watch Blender disappear.
I did not even try the Disconnect Hair or the Disconnect All, just Open, F12, Crash.
Hope this helps.
I appreciate the development, congratulations on the RC release.

[cat_v12_crash.blend](https://archive.blender.org/developer/F7587423/cat_v12_crash.blend) I have uploaded the file, which now crashes immediately. Open the file, press F12, watch Blender disappear. I did not even try the Disconnect Hair or the Disconnect All, just Open, F12, Crash. Hope this helps. I appreciate the development, congratulations on the RC release.

Successfully opened the file, and chose Object Mode, instead of Particle Edit mode, was able to F12 Render. Apparently the crash is only in Particle Edit Mode. Still haven't figured out how to "Commit the Edits" of the Particle Edit, so I can go back and increase the number of Hair Particles??

Successfully opened the file, and **chose Object Mode**, instead of Particle Edit mode, was able to F12 Render. Apparently the crash is only in Particle Edit Mode. Still haven't figured out how to "Commit the Edits" of the Particle Edit, so I can go back and increase the number of Hair Particles??

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-07-11 12:49:08 +02:00

Backtrace:

Thread 37 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fff73fff700 (LWP 3135)]
0x0000555557d1a609 in psys_copy_particles (psys_dst=0x7fffd23eee08, psys_src=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:747
747	  if (psys_dst->particles != psys_src->particles) {
(gdb) bt
- 0  0x0000555557d1a609 in psys_copy_particles (psys_dst=0x7fffd23eee08, psys_src=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:747
- 1  0x0000555558af6b8f in pe_get_current (depsgraph=0x7fffc34273c8, scene=0x7fffcf437008, ob=0x7fffd0a75408, create=1)
    at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:344
#2  0x0000555558af6c30 in PE_create_current (depsgraph=0x7fffc34273c8, scene=0x7fffcf437008, ob=0x7fffd0a75408)
    at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:363
#3  0x0000555558771ec1 in drw_particle_update_ptcache (object_eval=0x7fffc346f608, psys=0x7fffca1c3308)
    at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1429
#4  0x0000555558772a9c in particles_ensure_procedural_data (object=0x7fffc346f608, psys=0x7fffca1c3308, md=0x7fffd4365488, r_hair_cache=0x7fff73ffcc28, subdiv=0,
    thickness_res=1) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1655
#5  0x00005555587796d3 in drw_shgroup_create_hair_procedural_ex (object=0x7fffc346f608, psys=0x7fffca1c3308, md=0x7fffd4365488, hair_pass=0x7fff52bf52a8,
    gpu_mat=0x0, gpu_shader=0x7fff32f10248) at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:138
#6  0x0000555558779d75 in DRW_shgroup_hair_create (object=0x7fffc346f608, psys=0x7fffca1c3308, md=0x7fffd4365488, hair_pass=0x7fff52bf52a8, shader=0x7fff32f10248)
    at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:236
#7  0x00005555586f12b4 in EEVEE_hair_cache_populate (vedata=0x7fffc347fe88, sldata=0x7fff6afe1308, ob=0x7fffc346f608, cast_shadow=0x7fff73ffcdca)
    at /home/zed/prog/blender/source/blender/draw/engines/eevee/eevee_materials.c:1747
#8  0x00005555586f443c in EEVEE_render_cache (vedata=0x7fffc347fe88, ob=0x7fffc346f608, engine=0x7fffc34c1288, UNUSED_depsgraph=0x7fffc34273c8)
    at /home/zed/prog/blender/source/blender/draw/engines/eevee/eevee_render.c:185
#9  0x00005555586aa294 in DRW_render_object_iter (vedata=0x7fffc347fe88, engine=0x7fffc34c1288, depsgraph=0x7fffc34273c8, callback=
    0x5555586f4302 <EEVEE_render_cache>) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:2071
#10 0x00005555586db675 in eevee_render_to_image (vedata=0x7fffc347fe88, engine=0x7fffc34c1288, render_layer=0x7fffc357a988, rect=0x7fff73ffd540)
    at /home/zed/prog/blender/source/blender/draw/engines/eevee/eevee_engine.c:449
#11 0x00005555586a9fe3 in DRW_render_to_image (engine=0x7fffc34c1288, depsgraph=0x7fffc34273c8)
    at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:2012
- 12 0x0000555557ffba5a in RE_engine_render (re=0x7fffc4bfc008, do_all=0) at /home/zed/prog/blender/source/blender/render/intern/source/external_engine.c:778
- 13 0x0000555557fff1e6 in do_render_3d (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1147
- 14 0x0000555557fff51f in do_render (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1224
- 15 0x0000555557fffd25 in do_render_composite (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1445
- 16 0x0000555558000a65 in do_render_all_options (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1719
- 17 0x0000555558001b68 in RE_RenderFrame (re=0x7fffc4bfc008, bmain=0x7fffd26f0d08, scene=0x7fffcf437008, single_layer=0x0, camera_override=0x0, frame=1,
    write_still=false) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:2121
#18 0x000055555c739e1d in render_startjob (rjv=0x7fffe67daa88, stop=0x7fffbfbbd844, do_update=0x7fffbfbbd842, progress=0x7fffbfbbd848)
    at /home/zed/prog/blender/source/blender/editors/render/render_internal.c:670
- 19 0x00005555582434cd in do_job_thread (job_v=0x7fffbfbbd7c8) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_jobs.c:383
- 20 0x0000555557f2017b in tslot_thread_start (tslot_p=0x7fffd09d9388) at /home/zed/prog/blender/source/blender/blenlib/intern/threads.c:260
- 21 0x00007ffff6a15458 in start_thread () from /lib64/libpthread.so.0
- 22 0x00007ffff327b71f in clone () from /lib64/libc.so.6
Backtrace: ``` Thread 37 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fff73fff700 (LWP 3135)] 0x0000555557d1a609 in psys_copy_particles (psys_dst=0x7fffd23eee08, psys_src=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:747 747 if (psys_dst->particles != psys_src->particles) { (gdb) bt - 0 0x0000555557d1a609 in psys_copy_particles (psys_dst=0x7fffd23eee08, psys_src=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:747 - 1 0x0000555558af6b8f in pe_get_current (depsgraph=0x7fffc34273c8, scene=0x7fffcf437008, ob=0x7fffd0a75408, create=1) at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:344 #2 0x0000555558af6c30 in PE_create_current (depsgraph=0x7fffc34273c8, scene=0x7fffcf437008, ob=0x7fffd0a75408) at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:363 #3 0x0000555558771ec1 in drw_particle_update_ptcache (object_eval=0x7fffc346f608, psys=0x7fffca1c3308) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1429 #4 0x0000555558772a9c in particles_ensure_procedural_data (object=0x7fffc346f608, psys=0x7fffca1c3308, md=0x7fffd4365488, r_hair_cache=0x7fff73ffcc28, subdiv=0, thickness_res=1) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1655 #5 0x00005555587796d3 in drw_shgroup_create_hair_procedural_ex (object=0x7fffc346f608, psys=0x7fffca1c3308, md=0x7fffd4365488, hair_pass=0x7fff52bf52a8, gpu_mat=0x0, gpu_shader=0x7fff32f10248) at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:138 #6 0x0000555558779d75 in DRW_shgroup_hair_create (object=0x7fffc346f608, psys=0x7fffca1c3308, md=0x7fffd4365488, hair_pass=0x7fff52bf52a8, shader=0x7fff32f10248) at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:236 #7 0x00005555586f12b4 in EEVEE_hair_cache_populate (vedata=0x7fffc347fe88, sldata=0x7fff6afe1308, ob=0x7fffc346f608, cast_shadow=0x7fff73ffcdca) at /home/zed/prog/blender/source/blender/draw/engines/eevee/eevee_materials.c:1747 #8 0x00005555586f443c in EEVEE_render_cache (vedata=0x7fffc347fe88, ob=0x7fffc346f608, engine=0x7fffc34c1288, UNUSED_depsgraph=0x7fffc34273c8) at /home/zed/prog/blender/source/blender/draw/engines/eevee/eevee_render.c:185 #9 0x00005555586aa294 in DRW_render_object_iter (vedata=0x7fffc347fe88, engine=0x7fffc34c1288, depsgraph=0x7fffc34273c8, callback= 0x5555586f4302 <EEVEE_render_cache>) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:2071 #10 0x00005555586db675 in eevee_render_to_image (vedata=0x7fffc347fe88, engine=0x7fffc34c1288, render_layer=0x7fffc357a988, rect=0x7fff73ffd540) at /home/zed/prog/blender/source/blender/draw/engines/eevee/eevee_engine.c:449 #11 0x00005555586a9fe3 in DRW_render_to_image (engine=0x7fffc34c1288, depsgraph=0x7fffc34273c8) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:2012 - 12 0x0000555557ffba5a in RE_engine_render (re=0x7fffc4bfc008, do_all=0) at /home/zed/prog/blender/source/blender/render/intern/source/external_engine.c:778 - 13 0x0000555557fff1e6 in do_render_3d (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1147 - 14 0x0000555557fff51f in do_render (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1224 - 15 0x0000555557fffd25 in do_render_composite (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1445 - 16 0x0000555558000a65 in do_render_all_options (re=0x7fffc4bfc008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1719 - 17 0x0000555558001b68 in RE_RenderFrame (re=0x7fffc4bfc008, bmain=0x7fffd26f0d08, scene=0x7fffcf437008, single_layer=0x0, camera_override=0x0, frame=1, write_still=false) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:2121 #18 0x000055555c739e1d in render_startjob (rjv=0x7fffe67daa88, stop=0x7fffbfbbd844, do_update=0x7fffbfbbd842, progress=0x7fffbfbbd848) at /home/zed/prog/blender/source/blender/editors/render/render_internal.c:670 - 19 0x00005555582434cd in do_job_thread (job_v=0x7fffbfbbd7c8) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_jobs.c:383 - 20 0x0000555557f2017b in tslot_thread_start (tslot_p=0x7fffd09d9388) at /home/zed/prog/blender/source/blender/blenlib/intern/threads.c:260 - 21 0x00007ffff6a15458 in start_thread () from /lib64/libpthread.so.0 - 22 0x00007ffff327b71f in clone () from /lib64/libc.so.6 ```
Clément Foucault was unassigned by Sebastian Parborg 2019-07-11 12:50:43 +02:00
Sergey Sharybin was assigned by Sebastian Parborg 2019-07-11 12:50:43 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

Or actually, this crashes with cycles too...

Or actually, this crashes with cycles too...

Added subscribers: @chorizo, @CraigD

Added subscribers: @chorizo, @CraigD

Added subscribers: @vitorboschi, @dark999

Added subscribers: @vitorboschi, @dark999

This issue was referenced by 914427afd5

This issue was referenced by 914427afd5129954781cf4459067efeb6afa7d14

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66686
No description provided.